--- a/resmobile.css
+++ b/resmobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 750px) {
     .container {
         max-width: 360px;
         margin: 0 auto;
@@ -482,14 +482,13 @@
 
     .foot {
         display: flex;
-        justify-content: start;
+        justify-content: center;
         align-items: center;
         background-color: #285E67;
         height: 365px;
-        padding-left: 139px;
 
         .inner-foot {
-            max-width: 884px;
+            max-width: 170px;
             gap: 36px;
             display: flex;
             flex-direction: column;
@@ -523,7 +522,7 @@
                     }
                 }
                 .nav {
-                    width: 347px;
+                    width: 155px;
                     height: 84px;
                     display: flex;
                     gap: 40px;
