--- a/restablet.css
+++ b/restablet.css
@@ -438,11 +438,10 @@
 
     .foot {
         display: flex;
-        justify-content: start;
+        justify-content: center;
         align-items: center;
         background-color: #285E67;
         height: 305px;
-        padding-left: 139px;
 
         .inner-foot {
             max-width: 884px;
