--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@
 
             .main-text {
                 width: 100%;
-                height: 94px;
                 display: flex;
                 align-items: end;
                 font-weight: 600;
@@ -219,7 +218,7 @@
         }
         .context-box {
             width: calc((100% - 53px)/2);
-            height: 474px;
+            height: auto;
             display: flex;
             flex-direction: column;
             gap: 50px;
@@ -238,7 +237,6 @@
                     color: #2B2B2B;
                 }
                 .text {
-                    height: 83px;
                     font-weight: 400;
                     font-size: 16px;
                     line-height: 24px;
@@ -285,7 +283,6 @@
 
             .main-context {
                 width: 100%;
-                height: 30px;
                 font-weight: 600;
                 font-size: 50.52px;
                 line-height: 30px;
